Martes, 9 octubre. 2h -Añadimos las calificaciones al seleccionar un alumno de la tabla

--- a/Ejemplo4/Ejemplo4.csproj
+++ b/Ejemplo4/Ejemplo4.csproj
@@ -74,6 +74,7 @@
     </ApplicationDefinition>
     <Compile Include="Commands\StudentCommand.cs" />
     <Compile Include="Commands\UpdateViewCommand.cs" />
+    <Compile Include="Models\NotasModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Services\StudentDBHandler.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
