Jueves 18 Noviembre. 2h - Validacion y maquina de estados

--- a/Ejemplo4/Ejemplo4.csproj
+++ b/Ejemplo4/Ejemplo4.csproj
@@ -73,6 +73,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\StudentCommand.cs" />
+    <Compile Include="Commands\StudentCommands\EditarNotasCommand.cs" />
+    <Compile Include="Commands\StudentCommands\GuardarEstudianteCommand.cs" />
     <Compile Include="Commands\UpdateViewCommand.cs" />
     <Compile Include="Models\NotasModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
